--- a/index.html
+++ b/index.html
@@ -5,27 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--FONT-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <!--    -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="movie-app.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="app.js"></script>
-    <title>Ajax</title>
+<!--    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+    <title>Movie-App</title>
 </head>
 <body>
 
-<!--OUTPUTS FOR JSON DATA-->
-<div id="output1"></div>
-<div id="output2"></div>
-
-<div class="output1"></div>
-<div class="output2"></div>
-<div id="movieResult"></div>
 
 <!--Input Add Movie-->
 Title: <input type="text" name="title" value="Spider Man"><br>
 Rating: <input type="text" name="rating" value="4"><br>
 <button>Add</button>
+
+<!--OUTPUTS FOR JSON DATA-->
+<div class="output1"></div>
+<div class="output2"></div>
+<div id="movieResult"></div>
+
 <script src="app.js"></script>
 </body>
 </html>
