--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 </head>
 <body>
 
+<!--NAV BAR-->
+<nav class="navbar navbar-light bg-light">
+    <span class="navbar-brand mb-0 h1">Navbar</span>
+</nav>
 
 <!--Input Add Movie-->
 Title: <input type="text" name="title" value="Spider Man"><br>
