--- a/index.html
+++ b/index.html
@@ -9,18 +9,22 @@
     <link rel="stylesheet" href="movie-app.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!--    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
-    <title>Movie-App</title>
+    <title>Movie-App</title><br>
 </head>
 <body>
 
 <!--NAV BAR-->
-<nav class="navbar navbar-light bg-light">
-    <span class="navbar-brand mb-0 h1">Navbar</span>
+<nav class="navbar navbar-light bg-light justify-content-between">
+    <a class="navbar-brand">Navbar</a>
+    <form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
 </nav>
 
-<!--Input Add Movie-->
-Title: <input type="text" name="title" value="Spider Man"><br>
-Rating: <input type="text" name="rating" value="4"><br>
+Input Add Movie
+Title: <input type="text" name="title" value=""><br>
+Rating: <input type="text" name="rating" value=""><br>
 <button>Add</button>
 
 <!--OUTPUTS FOR JSON DATA-->
