updated css, added to submit forms

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 
 <!--NAV BAR-->
 <nav class="navbar navbar-light bg-light justify-content-between">
-    <a class="navbar-brand">MOVIE APP</a>
+    <a class="navbar-brand" id="nav-title">MOVIE APP</a>
     <span class="form-inline add-btn">
-        <h5>Title:</h5> <input type="text" name="title" value=""><br>
-        <h5>Rating:</h5> <input type="text" name="rating" value=""><br>
-        <button>Add</button>
+        <h5>Title:</h5> <input class="input-field" type="text" name="title" value=""><br>
+        <h5>Year:</h5> <input class="input-field" type="text" name="year" value=""><br>
+        <h5>Rating:</h5> <input class="input-field" type="text" name="rating" value=""><br>
+        <h5>Plot:</h5> <input class="input-field" type="text" name="plot" value=""><br>
+        <button type="button" class="btn btn-primary btn-md btn-block" style="margin-top: 5px">Add</button>
     </span>
 </nav><hr>
 
