added delete function

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <!--OUTPUTS FOR JSON DATA-->
 <div class="output1"></div>
-<div class="output2"></div>
+<div id="loading"></div>
 <div id="movieResult"></div>
 
 <script src="app.js"></script>
